--- a/_config.yml
+++ b/_config.yml
@@ -49,11 +49,11 @@ issues:
     author:
     - Russell V. Lenth
   - title: 'sparkTable: Generating Graphical Tables for Websites and Documents with R'
-    slug: templ+kowarik+meindl
+    slug: kowarik+meindl+templ
     author:
-    - Matthias Templ
     - Alexander Kowarik
     - Bernhard Meindl
+    - Matthias Templ
   - title: 'showtext: Using System Fonts in R Graphics'
     slug: qiu
     author:
