--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ issues:
     author:
     - Russell V. Lenth
   - title: 'sparkTable: Generating Graphical Tables for Websites and Documents with R'
-    slug: kowarik+meindl+templ
+    slug: kowarik-meindl-templ
     author:
     - Alexander Kowarik
     - Bernhard Meindl
