Accepted manuscripts online

--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,25 @@ issues:
   - title: 'showtext: Using System Fonts in R Graphics'
     slug: qiu
     author:
-    - Yixuan Qiu
+    - Yixuan Qiu 
+  - title: 'fslr: Connecting the FSL Software with R'
+    slug: muschelli-sweeney-lindquist-crainiceanu
+    author:
+    - John Muschelli
+    - Elizabeth M. Sweeney
+    - Martin Lindquist
+    - Ciprian M. Crainiceanu
+  - title: 'Correspondence Analysis on Generalised Aggregated Lexical Table (CA-GALT) in the FactoMineR Package'
+    slug: kostov-becue-husson
+    author:
+    - Belchin Kostov
+    - Mónica Bécue-Bertaut
+    - François Husson
+  - title: 'sae: An R Package for Small Area Estimation'
+    slug: molina-marhuenda
+    author:
+    - Isabel Molina
+    - Yolanda Marhuenda
 - issue: 2009-1
   year: 2009
   volume: 1
