--- a/_config.yml
+++ b/_config.yml
@@ -76,6 +76,10 @@ issues:
     author:
     - Isabel Molina
     - Yolanda Marhuenda
+  - title: 'Implementing Persistent O(1) Stacks and Queues in R'
+    slug: oneil
+    author:
+    - Shawn T. O'Neil
 - issue: 2009-1
   year: 2009
   volume: 1
