--- a/_config.yml
+++ b/_config.yml
@@ -80,6 +80,13 @@ issues:
     slug: oneil
     author:
     - Shawn T. O'Neil
+  - title: 'R as an Environment for the Analysis of dPCR and qPCR Experiments'
+    slug: roediger-burdukiewicz-blagodatskikh-schierack
+    author:
+    - Stefan Rödiger
+    - Michał Burdukiewicz
+    - Konstantin Blagodatskikh
+    - Peter Schierack
 - issue: 2009-1
   year: 2009
   volume: 1
