--- a/_config.yml
+++ b/_config.yml
@@ -1,93 +1,5 @@
 markdown: kramdown
 issues:
-- issue: accepted
-  articles:
-  - title: 'Peptides: A Package for Data Mining of Antimicrobial Peptides'
-    slug: osorio-rondonvillarreal-torres
-    author:
-    - Daniel Osorio
-    - Paola Rondón-Villarreal
-    - Rodrigo Torres
-  - title: 'Identifying Complex Causal Dependencies in Configurational Data with Coincidence Analysis'
-    slug: baumgartner-thiem
-    author:
-    - Michael Baumgartner
-    - Alrik Thiem
-  - title: 'fanplot: An R Package for Visualising Sequential Distributions'
-    slug: abel
-    author:
-    - Guy Abel
-  - title: 'rdrobust: An R Package for Robust Inference in Regression-Discontinuity Designs'
-    slug: calonico-cattaneo-titiunik
-    author:
-    - Matias D. Cattaneo
-    - Sebastian Calonico
-    - Rocio Titiunik
-  - title: 'The Complex Multivariate Gaussian Distribution'
-    slug: hankin
-    author:
-    - Robin Hankin
-  - title: 'Frames2: A Package for Estimation in Dual Frame Surveys'
-    slug: arcos-molina-ranalli-rueda
-    author:
-    - Antonio Arcos
-    - David Molina
-    - Maria Giovanna Ranalli
-    - María del Mar Rueda
-  - title: 'The gridGraphics Package'
-    slug: murrell
-    author:
-    - Paul Murrell
-  - title: 'Manipulation of Discrete Random Variables with discreteRV'
-    slug: hare-buja-hofmann
-    author:
-    - Eric Hare
-    - Andreas Buja
-    - Heike Hofmann
-  - title: 'Estimability Tools for Package Developers'
-    slug: lenth
-    author:
-    - Russell V. Lenth
-  - title: 'sparkTable: Generating Graphical Tables for Websites and Documents with R'
-    slug: kowarik-meindl-templ
-    author:
-    - Alexander Kowarik
-    - Bernhard Meindl
-    - Matthias Templ
-  - title: 'showtext: Using System Fonts in R Graphics'
-    slug: qiu
-    author:
-    - Yixuan Qiu 
-  - title: 'fslr: Connecting the FSL Software with R'
-    slug: muschelli-sweeney-lindquist-crainiceanu
-    author:
-    - John Muschelli
-    - Elizabeth M. Sweeney
-    - Martin Lindquist
-    - Ciprian M. Crainiceanu
-  - title: 'Correspondence Analysis on Generalised Aggregated Lexical Table (CA-GALT) in the FactoMineR Package'
-    slug: kostov-becue-husson
-    author:
-    - Belchin Kostov
-    - Mónica Bécue-Bertaut
-    - François Husson
-  - title: 'sae: An R Package for Small Area Estimation'
-    slug: molina-marhuenda
-    author:
-    - Isabel Molina
-    - Yolanda Marhuenda
-  - title: 'Implementing Persistent O(1) Stacks and Queues in R'
-    slug: oneil
-    author:
-    - Shawn T. O'Neil
-  - title: 'R as an Environment for Reproducible Analysis of DNA Amplification Experiments'
-    slug: roediger-burdukiewicz-blagodatskikh-jahn-schierack
-    author:
-    - Stefan Rödiger
-    - Michał Burdukiewicz
-    - Konstantin Blagodatskikh
-    - Michael Jahn
-    - Peter Schierack
 - issue: 2009-1
   year: 2009
   volume: 1
@@ -1682,3 +1594,176 @@ issues:
     pages:
     - 227
     - 228
+- issue: 2015-1
+  year: 2015
+  volume: 7
+  num: 1
+  month: jun
+  articles:
+  - title: Editorial
+    author: Bettina Grün
+    slug: editorial
+    pages:
+    - 3
+    - 3
+  - heading: Contributed Research Articles
+  - title: 'Peptides: A Package for Data Mining of Antimicrobial Peptides'
+    slug: osorio-rondonvillarreal-torres
+    author:
+    - Daniel Osorio
+    - Paola Rondón-Villarreal
+    - Rodrigo Torres
+    pages:
+    - 4
+    - 14
+  - title: 'fanplot: An R Package for Visualising Sequential Distributions'
+    slug: abel
+    author: Guy Abel
+    pages:
+    - 15
+    - 23
+  - title: 'sparkTable: Generating Graphical Tables for Websites and Documents with
+      R'
+    slug: templ-kowarik-meindl
+    author:
+    - Matthias Templ
+    - Alexander Kowarik
+    - Bernhard Meindl
+    pages:
+    - 24
+    - 37
+  - title: 'rdrobust: An R Package for Robust Inference in Regression-Discontinuity
+      Designs'
+    slug: cattaneo-calonico-titiunik
+    author:
+    - Matias D. Cattaneo
+    - Sebastian Calonico
+    - Rocio Titiunik
+    pages:
+    - 38
+    - 51
+  - title: 'Frames2: A Package for Estimation in Dual Frame Surveys'
+    slug: arcos-molina-ranalli-etal
+    author:
+    - Antonio Arcos
+    - David Molina
+    - Maria Giovanna Ranalli
+    - María del Mar Rueda
+    pages:
+    - 52
+    - 72
+  - title: The Complex Multivariate Gaussian Distribution
+    slug: hankin
+    author: Robin Hankin
+    pages:
+    - 73
+    - 80
+  - title: 'sae: An R Package for Small Area Estimation'
+    slug: marhuenda-molina
+    author:
+    - Yolanda Marhuenda
+    - Isabel Molina
+    pages:
+    - 81
+    - 98
+  - title: 'showtext: Using System Fonts in R Graphics'
+    slug: qiu
+    author: Yixuan Qiu
+    pages:
+    - 99
+    - 108
+  - title: 'Correspondence Analysis on Generalised Aggregated Lexical Table (CA-GALT) in the FactoMineR Package'
+    slug: kostov-becuebertaut-husson
+    author:
+    - Belchin Kostov
+    - Mónica Bécue-Bertaut
+    - François Husson
+    pages:
+    - 109
+    - 117
+  - title: 'Implementing Persistent O(1) Stacks and Queues in R'
+    slug: oneil
+    author: Shawn T. O'Neil
+    pages:
+    - 118
+    - 126
+  - title: 'R as an Environment for Reproducible Analysis of DNA Amplification Experiments'
+    slug: rodiger-burdukiewicz-blagodatskikh-etal
+    author:
+    - Stefan Rödiger
+    - Michał Burdukiewicz
+    - Konstantin Blagodatskikh
+    - Michael Jahn
+    - Peter Schierack
+    pages:
+    - 127
+    - 150
+  - title: 'The gridGraphics Package'
+    slug: murrell
+    author: Paul Murrell
+    pages:
+    - 151
+    - 162
+  - title: 'fslr: Connecting the FSL Software with R'
+    slug: muschelli-sweeney-lindquist-etal
+    author:
+    - John Muschelli
+    - Elizabeth M. Sweeney
+    - Martin Lindquist
+    - Ciprian M. Crainiceanu
+    pages:
+    - 163
+    - 175
+  - title: 'Identifying Complex Causal Dependencies in Configurational Data with Coincidence Analysis'
+    slug: baumgartner-thiem
+    author:
+    - Michael Baumgartner
+    - Alrik Thiem
+    pages:
+    - 176
+    - 184
+  - heading: News and Notes
+  - title: 'Manipulation of Discrete Random Variables with discreteRV'
+    slug: hare-buja-hofmann
+    author:
+    - Eric Hare
+    - Andreas Buja
+    - Heike Hofmann
+    pages:
+    - 185
+    - 194
+  - title: 'Estimability Tools for Package Developers'
+    slug: lenth
+    author: Russell V. Lenth
+    pages:
+    - 195
+    - 199
+  - title: 'R Foundation News'
+    author:
+    - Martin Mächler
+    - Kurt Hornik
+    slug: r-foundation
+    pages:
+    - 200
+    - 200
+  - title: 'Changes on CRAN'
+    author:
+    - Kurt Hornik
+    - Achim Zeileis
+    slug: cran
+    pages:
+    - 201
+    - 226
+  - title: 'Changes in R'
+    author: The R Core Team
+    slug: r-changes
+    pages:
+    - 227
+    - 238
+  - title: 'News from the Bioconductor Project'
+    author: The Bioconductor Team
+    slug: bioconductor
+    pages:
+    - 239
+    - 240
+ 
