--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ issues:
   year: 2009
   volume: 1
   num: 1
-  month: jun
+  month
   articles:
   - slug: Chambers
     title: Facets of R
@@ -1598,7 +1598,8 @@ issues:
   year: 2015
   volume: 7
   num: 1
-  month: jun
+  month: June
+  bibmonth: jun
   articles:
   - title: Editorial
     author: Bettina Grün
