2015-1: improve RJournal.bib

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ issues:
     - 8
   - slug: Theussl+Zeileis
     title: Collaborative Software Development Using R-Forge
-    bibtitle: 'Collaborative Software Development Using {R}-Forge'
+    bibtitle: 'Collaborative Software Development Using {R}-{F}orge'
     author:
     - Stefan Theußl
     - Achim Zeileis
@@ -137,7 +137,7 @@ issues:
     bibtitle: 'News from the {B}ioconductor Project'
     page: 91
   - title: R Foundation News
-    bibtitle: '{R} Foundation News'
+    bibtitle: '{R} {F}oundation News'
     page: 92
 - issue: 2009-2
   year: 2009
@@ -199,7 +199,7 @@ issues:
     - G. Schwarzer
     bibauthor:
     - J. Carpenter
-    - G. R{\ "u}cker
+    - G. R{\" u}cker
     - G. Schwarzer
     pages:
     - 31
@@ -259,7 +259,7 @@ issues:
     bibtitle: 'News from the {B}ioconductor Project'
     page: 95
   - title: R Foundation News
-    bibtitle: '{R} Foundation News'
+    bibtitle: '{R} {F}oundation News'
     page: 96
 - issue: 2010-1
   volume: 2
@@ -380,7 +380,7 @@ issues:
     bibtitle: 'News from the {B}ioconductor Project'
     page: 85
   - title: R Foundation News
-    bibtitle: '{R} Foundation News'
+    bibtitle: '{R} {F}oundation News'
     page: 86
 - issue: 2010-2
   volume: 2
@@ -423,7 +423,7 @@ issues:
     title: 'dclone: Data Cloning in R'
     bibtitle: '{dclone}: Data Cloning in {R}'
     author: Péter Sólymos
-    bibauthor: P{\' e}ter S{\' o}lymos}
+    bibauthor: P{\' e}ter S{\' o}lymos
     pages:
     - 29
     - 37
@@ -436,7 +436,7 @@ issues:
     - 40
   - slug: Ardia+Hoogerheide
     title: Bayesian Estimation of the GARCH(1,1) Model with Student-t Innovations
-    bibtitle: 'Bayesian Estimation of the {GARCH}(1,1) Model with {S}tudent-t Innovations'
+    bibtitle: 'Bayesian Estimation of the {GARCH}(1,1) Model with {S}tudent-$t$ Innovations'
     author:
     - David Ardia
     - Lennart F. Hoogerheide
@@ -500,7 +500,7 @@ issues:
     bibtitle: 'News from the {B}ioconductor Project'
     page: 101
   - title: R Foundation News
-    bibtitle: '{R} Foundation News'
+    bibtitle: '{R} {F}oundation News'
     page: 102
 - issue: 2011-1
   volume: 3
@@ -528,7 +528,7 @@ issues:
     - 18
   - slug: Chalabi~et~al
     title: Rmetrics - timeDate Package
-    bibtitle: '{Rmetrics} -- {timeDate} Package'
+    bibtitle: '{Rmetrics} - {timeDate} Package'
     author:
     - Yohan Chalabi
     - Martin Mächler
@@ -536,7 +536,7 @@ issues:
     bibauthor:
     - Yohan Chalabi
     - Martin M{\" a}chler
-    - Diethelm W{\" a}rtz
+    - Diethelm W{\" u}rtz
     pages:
     - 19
     - 24
@@ -569,7 +569,7 @@ issues:
     - 43
   - slug: Lafitte~et~al
     title: Cryptographic Boolean Functions with R
-    bibtitle: 'Cryptographic Boolean Functions with {R}'
+    bibtitle: 'Cryptographic {B}oolean Functions with {R}'
     author:
     - Frédéric Lafitte
     - Dirk Van Heule
@@ -644,7 +644,7 @@ issues:
     bibtitle: 'News from the {B}ioconductor Project'
     page: 101
   - title: R Foundation News
-    bibtitle: '{R} Foundation News'
+    bibtitle: '{R} {F}oundation News'
     page: 102
 - issue: 2011-2
   volume: 3
@@ -754,7 +754,7 @@ issues:
     bibtitle: 'News from the {B}ioconductor Project'
     page: 86
   - title: R Foundation News
-    bibtitle: '{R} Foundation News'
+    bibtitle: '{R} {F}oundation News'
     page: 87
 - issue: 2012-1
   volume: 4
@@ -834,7 +834,7 @@ issues:
   - slug: Hornik~et~al
     type: From the Core
     title: Who Did What? The Roles of R Package Authors and How to Refer to Them
-    bibtitle: 'Who Did What? The Roles of {R} Package Authors and How to Refer to Them'
+    bibtitle: 'Who Did What? {T}he Roles of {R} Package Authors and How to Refer to Them'
     author:
     - Kurt Hornik
     - Duncan Murdoch
@@ -850,7 +850,7 @@ issues:
     bibtitle: 'Changes on {CRAN}'
     page: 80
   - title: R Foundation News
-    bibtitle: '{R} Foundation News'
+    bibtitle: '{R} {F}oundation News'
     page: 96
 - issue: 2012-2
   volume: 4
@@ -951,7 +951,7 @@ issues:
     bibtitle: 'News from the {B}ioconductor Project'
     page: 101
   - title: R Foundation News
-    bibtitle: '{R} Foundation News'
+    bibtitle: '{R} {F}oundation News'
     page: 102
 - issue: 2013-1
   year: 2013
@@ -1062,8 +1062,8 @@ issues:
     pages:
     - 98
     - 108
-  - title: 'StellaR: a Package to Manage Stellar Evolution Tracks and Isochrones'
-    bibtitle: '{StellaR}: a Package to Manage Stellar Evolution Tracks and Isochrones'
+  - title: 'stellaR: a Package to Manage Stellar Evolution Tracks and Isochrones'
+    bibtitle: '{stellaR}: a Package to Manage Stellar Evolution Tracks and Isochrones'
     slug: valle-dellomodarme
     author:
     - Giada Valle
@@ -1072,7 +1072,7 @@ issues:
     - 108
     - 117
   - title: Let Graphics Tell the Story - Datasets in R
-    bibtitle: 'Let Graphics Tell the Story -- Datasets in {R}'
+    bibtitle: 'Let Graphics Tell the Story -- {D}atasets in {R}'
     slug: hofmann-unwin-cook
     author:
     - Heike Hofmann
@@ -1116,7 +1116,7 @@ issues:
     - Dan Lin
     - Ziv Shkedy
     - Willem Talloen
-    - Hinrich W.H. Goehlmann
+    - Hinrich W. H. Goehlmann
     - Lieven Clement
     pages:
     - 171
@@ -1175,9 +1175,9 @@ issues:
     - 212
     - 215
   - title: The R User Conference 2013
-    bibtitle: 'The {R} User Conference 2013'
+    bibtitle: 'The {R} {U}ser {C}onference 2013'
     author: UseR 2013 Organising Committee
-    bibauthor: {UseR 2013 Organising Committee}
+    bibauthor: '{UseR 2013 Organising Committee}'
     slug: user2013
     pages:
     - 215
@@ -1185,13 +1185,13 @@ issues:
   - title: News from the Bioconductor Project
     bibtitle: 'News from the {B}ioconductor Project'
     author: Bioconductor Team
-    bibauthor: {Bioconductor Team}
+    bibauthor: '{Bioconductor Team}'
     slug: bioconductor
     pages:
     - 218
     - 220
   - title: R Foundation News
-    bibtitle: '{R} Foundation News'
+    bibtitle: '{R} {F}oundation News'
     author: Kurt Hornik
     slug: r-foundation
     pages:
@@ -1244,7 +1244,7 @@ issues:
     - 16
     - 29
   - title: RNetCDF – A Package for Reading and Writing NetCDF Datasets
-    bibtitle: '{RNetCDF} –- A Package for Reading and Writing {NetCDF} Datasets'
+    bibtitle: '{RNetCDF} -- A Package for Reading and Writing {NetCDF} Datasets'
     slug: michna-woods
     author:
     - Pavel Michna
@@ -1342,7 +1342,7 @@ issues:
     - 129
     - 137
   - title: 'betategarch: Simulation, Estimation and Forecasting of Beta-Skew-t-EGARCH Models'
-    bibtitle: '{betategarch}: Simulation, Estimation and Forecasting of {B}eta-Skew-t-{EGARCH} Models'
+    bibtitle: '{betategarch}: Simulation, Estimation and Forecasting of {B}eta-Skew-$t$-{EGARCH} Models'
     slug: sucarrat
     author: Genaro Sucarrat
     pages:
@@ -1357,7 +1357,7 @@ issues:
     - 161
   - heading: News and Notes
   - title: R Foundation News
-    bibtitle: '{R} Foundation News'
+    bibtitle: '{R} {F}oundation News'
     author: Kurt Hornik
     slug: r-foundation
     pages:
@@ -1366,8 +1366,8 @@ issues:
   - title: News from the Bioconductor Project
     bibtitle: 'News from the {B}ioconductor Project'
     author: Bioconductor Team
+    bibauthor: '{Bioconductor Team}'
     slug: bioconductor
-    bibauthor: {Bioconductor Team}
     pages:
     - 162
     - 164
@@ -1404,7 +1404,7 @@ issues:
   month: June
   bibmonth: jun
   articles:
-  - title: Editorial'
+  - title: Editorial
     author: Deepayan Sarkar
     slug: editorial
     pages:
@@ -1577,7 +1577,7 @@ issues:
     - 178
     - 181
   - title: Addendum to "Statistical Software from a Blind Person's Perspective"
-    bibtitle: Addendum to ``Statistical Software from a Blind Person's Perspective''
+    bibtitle: Addendum to ``{S}tatistical Software from a Blind Person's Perspective''
     slug: godfrey-erhardt
     author:
     - A. Jonathan R. Godfrey
@@ -1586,7 +1586,7 @@ issues:
     - 182
     - 182
   - title: R Foundation News
-    bibtitle: '{R} Foundation News'
+    bibtitle: '{R} {F}oundation News'
     author: Kurt Hornik
     slug: r-foundation
     pages:
@@ -1595,8 +1595,8 @@ issues:
   - title: News from the Bioconductor Project
     bibtitle: 'News from the {B}ioconductor Project'
     author: Bioconductor Team
+    bibauthor: '{Bioconductor Team}'
     slug: bioconductor
-    bibauthor: {Bioconductor Team}
     pages:
     - 184
     - 185
@@ -1693,7 +1693,7 @@ issues:
     - 81
     - 95
   - title: 'sgof: An R Package for Multiple Testing Problems'
-    bibtitle: '{sgof}: An R Package for Multiple Testing Problems'
+    bibtitle: '{sgof}: An {R} Package for Multiple Testing Problems'
     slug: conde-alvarez
     author:
     - Irene Castro-Conde
@@ -1754,7 +1754,7 @@ issues:
     - 163
     - 173
   - title: 'gset: An R Package for Exact Sequential Test of Equivalence Hypothesis Based on Bivariate Non-Central t-Statistics'
-    bibtitle: '{gset}: An {R} Package for Exact Sequential Test of Equivalence Hypothesis Based on Bivariate Non-Central t-Statistics'
+    bibtitle: '{gset}: An {R} Package for Exact Sequential Test of Equivalence Hypothesis Based on Bivariate Non-Central $t$-Statistics'
     slug: liu
     author: Fang Liu
     pages:
@@ -1787,7 +1787,7 @@ issues:
     - 187
     - 189
   - title: R Foundation News
-    bibtitle: '{R} Foundation News'
+    bibtitle: '{R} {F}oundation News'
     author:
     - Martin Mächler
     - Kurt Hornik
@@ -1819,8 +1819,8 @@ issues:
   - title: News from the Bioconductor Project
     bibtitle: 'News from the {B}ioconductor Project'
     author: The Bioconductor Team
-    slug: bioconductor
     bibauthor: '{The Bioconductor Team}'
+    slug: bioconductor
     pages:
     - 227
     - 228
@@ -1835,7 +1835,7 @@ issues:
   articles:
   - title: Editorial
     author: Bettina Grün
-    bibauthor: Bettina Gr{\ "u}n
+    bibauthor: Bettina Gr{\" u}n
     slug: editorial
     pages:
     - 3
@@ -1893,7 +1893,7 @@ issues:
     - Antonio Arcos
     - David Molina
     - Maria Giovanna Ranalli
-    - Mar{\' i}a del Mar Rueda
+    - Mar{\' \i}a del Mar Rueda
     pages:
     - 52
     - 72
@@ -2004,7 +2004,7 @@ issues:
     - 199
   - heading: News and Notes
   - title: R Foundation News
-    bibtitle: '{R} Foundation News'
+    bibtitle: '{R} {F}oundation News'
     author:
     - Martin Mächler
     - Kurt Hornik
