--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,12 @@ markdown: kramdown
 issues:
 - issue: accepted
   articles:
+  - title: 'PracTools: Computations for Design of Finite Population Samples'
+    slug: valliant+dever+kreuter
+    author:
+    - Richard Valliant
+    - Jill A. Dever
+    - Frauke Kreuter
 - issue: 2009-1
   year: 2009
   volume: 1
