2015-1: author order changed for Molina and Marhuenda

--- a/_config.yml
+++ b/_config.yml
@@ -1912,10 +1912,10 @@ issues:
     - 80
   - title: 'sae: An R Package for Small Area Estimation'
     bibtitle: '{sae}: An {R} Package for Small Area Estimation'
-    slug: marhuenda-molina
+    slug: molina-marhuenda
     author:
-    - Yolanda Marhuenda
     - Isabel Molina
+    - Yolanda Marhuenda
     pages:
     - 81
     - 98
