rss.atom updated

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ issues:
 - issue: accepted
   articles:
   - title: 'PracTools: Computations for Design of Finite Population Samples'
-    slug: valliant+dever+kreuter
+    slug: valliant-dever-kreuter
     author:
     - Richard Valliant
     - Jill A. Dever
