--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,11 @@ issues:
     - Richard Valliant
     - Jill A. Dever
     - Frauke Kreuter
+  - title: 'zoib: An R package for Bayesian Inference for Zero/One Inflated Beta Regression Model'
+    slug: liu+kong
+    author:
+    - Fang Liu
+    - Yunchuan Kong
 - issue: 2009-1
   year: 2009
   volume: 1
