--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,11 @@ issues:
     author:
     - Fang Liu
     - Yunchuan Kong
+  - title: 'abctools: An R Package for Tuning Approximate Bayesian Computation Analyses'
+    slug: nunes-prangle
+    author:
+    - Matthew A. Nunes
+    - Dennis Prangle
 - issue: 2009-1
   year: 2009
   volume: 1
