--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,14 @@ issues:
     author:
     - Matthew A. Nunes
     - Dennis Prangle
+  - title: 'SRCS: Statistical Ranking Color Scheme for Visualizing Parameterized Multiple Pairwise Comparisons with R'
+    slug: villacorta-saez
+    author:
+    - Pablo J. Villacorta
+    - José A. Sáez
+    bibauthor:
+    - Pablo J. Villacorta
+    - Jos{\'e} A. S{\'a}ez
 - issue: 2009-1
   year: 2009
   volume: 1
