--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,15 @@ issues:
     bibauthor:
     - Pablo J. Villacorta
     - Jos{\'e} A. S{\'a}ez
+  - title: 'apc: A Package for Age-Period-Cohort Analysis'
+    slug: nielsen
+    author:
+    - Bent Nielsen
+  - title: 'BSGS: Bayesian Sparse Group Selection'
+    slug: lee-chen
+    author:
+    - Kuo-Jung Lee
+    - Ray-Bing Chen
 - issue: 2009-1
   year: 2009
   volume: 1
