--- a/_config.yml
+++ b/_config.yml
@@ -35,6 +35,16 @@ issues:
     author:
     - Kuo-Jung Lee
     - Ray-Bing Chen
+  - title: 'Fitting Conditional and Simultaneous Autoregressive Spatial Models in hglm'
+    slug: alam-roennegaard-shen
+    author:
+    - Moudud Alam
+    - Lars Rönnegård
+    - Xia Shen
+    bibauthor:
+    - Moudud Alam
+    - Lars R\"onneg{\aa}rd
+    - Xia Shen
 - issue: 2009-1
   year: 2009
   volume: 1
