--- a/_config.yml
+++ b/_config.yml
@@ -45,6 +45,11 @@ issues:
     - Moudud Alam
     - Lars R\"onneg{\aa}rd
     - Xia Shen
+  - title: 'Working with Multilabel Datasets in R: The mldr Package'
+    slug: charte-charte
+    author: 
+    - Francisco Charte
+    - David Charte
 - issue: 2009-1
   year: 2009
   volume: 1
