--- a/_config.yml
+++ b/_config.yml
@@ -50,6 +50,11 @@ issues:
     author: 
     - Francisco Charte
     - David Charte
+  - title: 'treeClust: An R Package For Tree-Based Clustering Dissimilarities'
+    slug: buttrey-whitaker
+    author: 
+    - Samuel E. Buttrey
+    - Lyn R. Whitaker
 - issue: 2009-1
   year: 2009
   volume: 1
