--- a/_config.yml
+++ b/_config.yml
@@ -55,6 +55,17 @@ issues:
     author: 
     - Samuel E. Buttrey
     - Lyn R. Whitaker
+  - title: 'mmpp: A Package for Calculating Similarity and Distance Metrics for Simple and Marked Point Process'
+    slug: hino-takano-murata
+    author:
+    - Hideitsu Hino
+    - Ken Takano
+    - Noboru Murata
+  - title: 'ALTopt: An R Package for Optimal Experimental Design of Accelerated Life Testing'
+    slug: seo-pan
+    author:
+    - Kangwon Seo
+    - Rong Pan
 - issue: 2009-1
   year: 2009
   volume: 1
