--- a/_config.yml
+++ b/_config.yml
@@ -66,6 +66,18 @@ issues:
     author:
     - Kangwon Seo
     - Rong Pan
+  - title: 'mtk (Mexico Toolkit): An R Package for Uncertainty and Sensitivity Analyses of Numerical Experiments'
+    slug: wang-faivre-richard-monod
+    author:
+    - Juhui Wang
+    - Robert Faivre
+    - Hervé Richard
+    - Hervé Monod
+    bibauthor:
+    - Juhui Wang
+    - Robert Faivre
+    - Herv{\' e} Richard
+    - Herv{\' e} Monod
 - issue: 2009-1
   year: 2009
   volume: 1
