--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ issues:
     - Jill A. Dever
     - Frauke Kreuter
   - title: 'zoib: An R package for Bayesian Inference for Zero/One Inflated Beta Regression Model'
-    slug: liu+kong
+    slug: liu-kong
     author:
     - Fang Liu
     - Yunchuan Kong
@@ -78,6 +78,12 @@ issues:
     - Robert Faivre
     - Herv{\' e} Richard
     - Herv{\' e} Monod
+  - title: 'Heteroscedastic Censored and Truncated Regression with crch'
+    slug: messner-mayr-zeileis
+    author:
+    - Jakob W. Messner
+    - Georg J. Mayr
+    - Achim Zeileis
 - issue: 2009-1
   year: 2009
   volume: 1
