--- a/_config.yml
+++ b/_config.yml
@@ -84,6 +84,12 @@ issues:
     - Jakob W. Messner
     - Georg J. Mayr
     - Achim Zeileis
+  - title: 'ClustVarLV: An R Package for the Clustering of Variables Around Latent Variables'
+    slug: vigneau-chen-qannari
+    author:
+    - Evelyne Vigneau
+    - Mingkun Chen
+    - El Mostafa Qannari
 - issue: 2009-1
   year: 2009
   volume: 1
