--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ issues:
     - José A. Sáez
     bibauthor:
     - Pablo J. Villacorta
-    - Jos{\'e} A. S{\'a}ez
+    - Jos{\' e} A. S{\' a}ez
   - title: 'apc: A Package for Age-Period-Cohort Analysis'
     slug: nielsen
     author:
@@ -90,6 +90,16 @@ issues:
     - Evelyne Vigneau
     - Mingkun Chen
     - El Mostafa Qannari
+  - title: 'QuantifQuantile: An R Package for Performing Quantile Regression Through Optimal Quantization'
+    slug: charlier-paindaveine-saracco
+    author:
+    - Isabelle Charlier
+    - Davy Paindaveine
+    - Jérôme Saracco
+    bibauthor:
+    - Isabelle Charlier
+    - Davy Paindaveine, 
+    - J{\' e}r{\^ o}me Saracco
 - issue: 2009-1
   year: 2009
   volume: 1
