--- a/_config.yml
+++ b/_config.yml
@@ -100,6 +100,11 @@ issues:
     - Isabelle Charlier
     - Davy Paindaveine, 
     - J{\' e}r{\^ o}me Saracco
+  - title: 'An Interactive Survey Application for Validating Social Network Analysis Techniques'
+    slug: joblin-mauerer
+    author:
+    - Mitchell Joblin
+    - Wolfgang Mauerer
 - issue: 2009-1
   year: 2009
   volume: 1
