--- a/_config.yml
+++ b/_config.yml
@@ -105,6 +105,20 @@ issues:
     author:
     - Mitchell Joblin
     - Wolfgang Mauerer
+  - title: 'quickpsy: An R Package to Fit Psychometric Functions for Multiple Groups'
+    slug: linares-lopez-moliner
+    author:
+    - Daniel Linares
+    - Joan López-Moliner
+    bibauthor:
+    - Daniel Linares
+    - Joan L{\' o}pez-Moliner
+  - title: 'VSURF: An R Package for Variable Selection Using Random Forests'
+    slug: genuer-poggi-tuleau-malot
+    author:
+    - Robin Genuer
+    - Jean-Michel Poggi
+    - Christine Tuleau-Malot
 - issue: 2009-1
   year: 2009
   volume: 1
