--- a/_config.yml
+++ b/_config.yml
@@ -119,6 +119,10 @@ issues:
     - Robin Genuer
     - Jean-Michel Poggi
     - Christine Tuleau-Malot
+  - title: 'An R Package for the Panel Data Approach for Program Evaluation: pampe'
+    slug: vega-bayo
+    author:
+    - Ainhoa Vega-Bayo
 - issue: 2009-1
   year: 2009
   volume: 1
