--- a/_config.yml
+++ b/_config.yml
@@ -123,6 +123,11 @@ issues:
     slug: vega-bayo
     author:
     - Ainhoa Vega-Bayo
+  - title: 'Code Profiling in R: A Review of Existing Methods and an Introduction to Package GUIProfiler'
+    slug: rubio-de-villar
+    author:
+    - Angel Rubio
+    - Fernando de Villar
 - issue: 2009-1
   year: 2009
   volume: 1
