--- a/_config.yml
+++ b/_config.yml
@@ -128,6 +128,10 @@ issues:
     author:
     - Angel Rubio
     - Fernando de Villar
+  - title: 'Numerical Evaluation of the Gauss Hypergeometric Function with the hypergeo Package'
+    slug: hankin
+    author:
+    - Robin K. S. Hankin
 - issue: 2009-1
   year: 2009
   volume: 1
