URL and slug corrected

--- a/_config.yml
+++ b/_config.yml
@@ -292,7 +292,7 @@ issues:
     pages:
     - 14
     - 17
-  - slug: Lafaye~de-Micheaux+Liquet
+  - slug: Lafaye~de~Micheaux+Liquet
     title: 'ConvergenceConcepts: an R Package to Investigate-Various-Modes-of-Convergence'
     bibtitle: '{ConvergenceConcepts}: an {R} Package to Investigate-Various-Modes-of-Convergence'
     author:
@@ -573,7 +573,7 @@ issues:
     pages:
     - 41
     - 47
-  - slug: Ferreira~da-Silva
+  - slug: Ferreira~da~Silva
     title: 'cudaBayesreg: Bayesian Computation in CUDA'
     bibtitle: '{cudaBayesreg}: {B}ayesian Computation in {CUDA}'
     author: Adelino Ferreira da Silva
@@ -893,7 +893,7 @@ issues:
   month: June
   bibmonth: jun
   articles:
-  - slug: G~Barnett-et~al
+  - slug: G~Barnett~et~al
     title: Analysing Seasonal Data
     author:
     - Adrian G. Barnett
@@ -1010,7 +1010,7 @@ issues:
     pages:
     - 19
     - 27
-  - slug: Do~Ha-et~al
+  - slug: Do~Ha~et~al
     title: 'frailtyHL: A Package for Fitting Frailty Models with H-likelihood'
     bibtitle: '{frailtyHL}: A Package for Fitting Frailty Models with H-likelihood'
     author:
