--- a/_config.yml
+++ b/_config.yml
@@ -132,6 +132,14 @@ issues:
     slug: hankin
     author:
     - Robin K. S. Hankin
+  - title: 'scmamp: Statistical Comparison of Multiple Algorithms in Multiple Problems'
+    slug: calvo-santafe
+    author:
+    - Borja Calvo
+    - Guzmán Santafé
+    bibauthor:
+    - Borja Calvo
+    - Guzm{\' a}n Santaf{\' e}
 - issue: 2009-1
   year: 2009
   volume: 1
