--- a/_config.yml
+++ b/_config.yml
@@ -140,6 +140,11 @@ issues:
     bibauthor:
     - Borja Calvo
     - Guzm{\' a}n Santaf{\' e}
+  - title: 'Open-Channel Computation with R'
+    slug: koohafkan-younis
+    author:
+    - Michael C. Koohafkan
+    - Bassam A. Younis
 - issue: 2009-1
   year: 2009
   volume: 1
