--- a/_config.yml
+++ b/_config.yml
@@ -145,6 +145,18 @@ issues:
     author:
     - Michael C. Koohafkan
     - Bassam A. Younis
+  - title: 'Generalized Hermite Distribution Modelling with the R Package hermite'
+    slug: morina-higueras-puig-oliveira
+    author:
+    - David Moriña
+    - Manuel Higueras
+    - Pedro Puig
+    - María Oliveira
+    bibauthor:
+    - David Mori{\~n}a
+    - Manuel Higueras
+    - Pedro Puig
+    - Mar{\' i}a Oliveira
 - issue: 2009-1
   year: 2009
   volume: 1
