--- a/_config.yml
+++ b/_config.yml
@@ -157,6 +157,12 @@ issues:
     - Manuel Higueras
     - Pedro Puig
     - Mar{\' i}a Oliveira
+  - title: 'Stylometry with R: A Package for Computational Text Analysis'
+    slug: eder-rybicki-kestemont
+    author:
+    - Maciej Eder
+    - Jan Rybicki
+    - Mike Kestemont
 - issue: 2009-1
   year: 2009
   volume: 1
